--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -75,7 +75,7 @@
 
 <body>
 	<div id="topmid">
-		<h1>Welcome to Prathyusha Online Book Store</h1>
+		<h1>Welcome to Prathyusha Online DevOps Book Store</h1>
 	</div>
 	
 	<div class="home">
